<?xml version="1.0"?>
<package format="2">
  <name>tf_to_pose</name>
  <version>0.0.0</version>
  <description>The tf_to_pose package</description>

  <maintainer email="fingb20@kaist.ac.kr">guri</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>fast_tf</build_depend>
  <build_depend>pose_tf</build_depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>pibot_arm_controllers</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>fast_tf</build_export_depend>
  <build_export_depend>pose_tf</build_export_depend>
  <build_export_depend>detection_msgs</build_export_depend>
  <build_export_depend>pibot_arm_controllers</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>fast_tf</exec_depend>
  <exec_depend>pose_tf</exec_depend>
  <exec_depend>detection_msgs</exec_depend>
  <exec_depend>pibot_arm_controllers</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
